<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_audio"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/button_video1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_video1"
        android:layout_below="@id/button_audio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/button_video2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_video2"
        android:layout_below="@id/button_video1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/button_video3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_video3"
        android:layout_below="@id/button_video2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/button_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_camera"
        android:layout_below="@id/button_video3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/button_camera"
        android:layout_marginTop="16dp"
        android:visibility="gone" />
</RelativeLayout>
